# mjlab_upkie

./: CITATION.cff  README.md  model_wrapper.py  plot.py  pyproject.toml  sim.py  sinus.py  test_onnx_runtime.py
logs/rsl_rl/upkie_velocity/bests/: default_no_push.onnx  default_pushed.onnx  rk_no_push.onnx
src/mjlab_upkie/: sim.py
src/mjlab_upkie/identification/: fit.py  model_wrapper.py  plot.py  resample.py  simulate.py  sinus.py
src/mjlab_upkie/robot/: __init__.py  scene.xml  upkie.xml  upkie_cfg.py  upkie_constants.py  upkie_kinematics.py
src/mjlab_upkie/robot/upkie/: config.json  no_slip.xml  robot.xml  scene.xml
src/mjlab_upkie/robot/upkie/assets/: back_cover.part  back_cover.stl  back_opening.part  back_opening.stl  battery_tattu.part  battery_tattu.stl  bottom_cover.part  bottom_cover.scad  bottom_cover.stl  controller_bracket.part  controller_bracket.stl  femur.part  femur.stl  front_cover.part  front_cover.stl  front_opening.part  front_opening.stl  left_side.part  left_side.stl  link_end.part  link_end.scad  link_end.stl  mj5208_rotor.part  mj5208_rotor.stl  mj5208_stator.part  mj5208_stator.stl  mj5208_support.part  mj5208_support.scad  mj5208_support.stl  moteus_controller.part  moteus_controller.stl  power_dist.part  power_dist.stl  qdd100_rotor.part  qdd100_rotor.stl  qdd100_stator.part  qdd100_stator.scad  qdd100_stator.stl  qdd100_stator__2.part  qdd100_stator__2.scad  (+21 more)
src/mjlab_upkie/tasks/: __init__.py  upkie_standup_env_cfg.py  upkie_velocity_env_cfg.py
