[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mjlab-upkie"
version = "0.1.0"
description = "Upkie example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mjlab",
]

[project.entry-points."mjlab.tasks"]
mjlab_upkie = "mjlab_upkie.tasks"

[tool.ruff]
src = ["src"]  # Helpful for recognizing first-party imports.
indent-width = 4

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab.git", rev = "cb0d5d3" }