[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mjlab-upkie"
version = "0.1.0"
license = "Apache-2.0"
description = "Reinforcement learning environments for the Upkie robot based on MjLab."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "mjlab",
    "onnxruntime",
    "optuna>=4.7.0",
    "pyqt5>=5.15.11",
]

[project.scripts]
sim = "mjlab_upkie.sim:main"
fit = "mjlab_upkie.identification.fit:main"
resample = "mjlab_upkie.identification.resample:main"
plot = "mjlab_upkie.identification.plot:main"
simulate = "mjlab_upkie.identification.simulate:main"

[project.entry-points."mjlab.tasks"]
mjlab_upkie = "mjlab_upkie.tasks"

[tool.ruff]
src = ["src"]  # Helpful for recognizing first-party imports.
indent-width = 4

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab.git", rev = "5ea83b3" }
